# firstwork-assignment

./: .env  .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: 01aad5da62e5_add_new_column_placeholder_and_update_.py  62873de640bb_initial_tables.py  693a3b73132c_remove_placeholder_no_use.py  77adacd45c44_add_unique_constraint_to_rules.py  80842913488d_added_column_rule_name.py  9dda891da0e6_remove_name_from_rules_fix_operator_.py  d132a9bf1803_add_indexes_in_contract.py
app/: config.py
app/api/: __init__.py  company.py  contract.py  rule.py
app/core/: constants.py
app/db/: session.py
app/models/: __init__.py  company.py  contract.py  rule.py  user.py
app/repositories/: __init__.py  contract.py  rule.py
app/schemas/: __init__.py  compliance.py  eligiblity.py  rule.py
app/services/: RuleEngine.py  __init__.py  compliance.py  contract.py  eligiblity.py  evaluate.py  placeholder.py  rule.py  rule_context.py
app/utils/: common_utils.py
data/: seed_dump.sql
scripts/: setup.sh  start.sh  test.sh
tests/: client.py  test_compliance.py  test_eligibility.py  test_rules.py
